@@ -86,8 +86,8 @@ class ReplicateSupplyServiceTests {
     private ReplicateSupplyService replicateSupplyService;
 
     @BeforeEach
-    public void init() {
-        MockitoAnnotations.initMocks(this);
+    void init() {
+        MockitoAnnotations.openMocks(this);
     }
 
     void workerCanWorkAndHasGas(String workerAddress) {
@@ -657,18 +657,18 @@ class ReplicateSupplyServiceTests {
     @Test
     void shouldNotGetInterruptedReplicateSinceEnclaveChallengeNeededButNotGenerated() {
 
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         Task teeTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
         Optional<Replicate> noTeeReplicate = getStubReplicate(ReplicateStatus.COMPUTING);
         teeTask.setTag(TEE_TAG);
 
         when(workerService.getChainTaskIds(WALLET_WORKER_1)).thenReturn(ids);
-        when(taskService.getTasksByChainTaskIds(ids)).thenReturn(Arrays.asList(teeTask));
+        when(taskService.getTasksByChainTaskIds(ids)).thenReturn(List.of(teeTask));
         when(replicatesService.getReplicate(any(), any())).thenReturn(noTeeReplicate);
         when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, true)).thenReturn("");
 
         List<TaskNotification> taskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(taskNotifications).isEmpty();
 
@@ -680,7 +680,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // CREATED, ..., CAN_CONTRIBUTE => RecoveryAction.CONTRIBUTE
     void shouldTellReplicateToContributeWhenComputing() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.COMPUTING);
 
@@ -691,7 +691,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -704,7 +704,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // CONTRIBUTING + !onChain => RecoveryAction.CONTRIBUTE
     void shouldTellReplicateToContributeSinceNotDoneOnchain() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.CONTRIBUTING);
 
@@ -718,7 +718,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(false);
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -734,7 +734,7 @@ class ReplicateSupplyServiceTests {
     void shouldTellReplicateToWaitSinceContributedOnchain() {
         long blockNumber = 3;
         // ChainReceipt chainReceipt = new ChainReceipt(blockNumber, "");
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.CONTRIBUTING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.CONTRIBUTED);
@@ -773,7 +773,7 @@ class ReplicateSupplyServiceTests {
     void shouldTellReplicateToRevealSinceConsensusReached() {
         long blockNumber = 3;
         // ChainReceipt chainReceipt = new ChainReceipt(blockNumber, "");
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.CONTRIBUTING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.CONTRIBUTED);
@@ -810,7 +810,7 @@ class ReplicateSupplyServiceTests {
     // any status + Task in CONTRIBUTION_TIMEOUT => RecoveryAction.ABORT_CONTRIBUTION_TIMEOUT
     void shouldTellReplicateToAbortSinceContributionTimeout() {
         long blockNumber = 3;
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.CONTRIBUTION_TIMEOUT);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.CONTRIBUTING);
 
@@ -837,7 +837,7 @@ class ReplicateSupplyServiceTests {
     // !CONTRIBUTED + Task in CONSENSUS_REACHED => RecoveryAction.ABORT_CONSENSUS_REACHED
     void shouldTellReplicateToWaitSinceConsensusReachedAndItDidNotContribute() {
         long blockNumber = 3;
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.CONSENSUS_REACHED);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.STARTING);
 
@@ -864,7 +864,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // CONTRIBUTED + Task in REVEAL phase => RecoveryAction.REVEAL
     void shouldTellReplicateToRevealSinceContributed() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.AT_LEAST_ONE_REVEALED);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.CONTRIBUTED);
 
@@ -875,7 +875,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -888,7 +888,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // REVEALING + !onChain => RecoveryAction.REVEAL
     void shouldTellReplicateToRevealSinceNotDoneOnchain() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.AT_LEAST_ONE_REVEALED);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.REVEALING);
 
@@ -902,7 +902,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(false);
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -918,7 +918,7 @@ class ReplicateSupplyServiceTests {
     void shouldTellReplicateToWaitSinceRevealed() {
         long blockNumber = 3;
         // ChainReceipt chainReceipt = new ChainReceipt(blockNumber, "");
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.AT_LEAST_ONE_REVEALED);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.REVEALING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.REVEALED);
@@ -957,7 +957,7 @@ class ReplicateSupplyServiceTests {
     void shouldTellReplicateToUploadResultSinceRequestedAfterRevealing() {
         long blockNumber = 3;
         // ChainReceipt chainReceipt = new ChainReceipt(blockNumber, "");
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.AT_LEAST_ONE_REVEALED);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.REVEALING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.RESULT_UPLOAD_REQUESTED);
@@ -992,7 +992,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // RESULT_UPLOAD_REQUESTED => RecoveryAction.UPLOAD_RESULT
     void shouldTellReplicateToUploadResultSinceRequested() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RESULT_UPLOADING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.RESULT_UPLOAD_REQUESTED);
 
@@ -1003,7 +1003,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1016,7 +1016,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // RESULT_UPLOADING + not done yet => RecoveryAction.UPLOAD_RESULT
     void shouldTellReplicateToUploadResultSinceNotDoneYet() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RESULT_UPLOADING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.RESULT_UPLOADING);
 
@@ -1029,7 +1029,7 @@ class ReplicateSupplyServiceTests {
         when(replicatesService.isResultUploaded(CHAIN_TASK_ID)).thenReturn(false);
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1043,7 +1043,7 @@ class ReplicateSupplyServiceTests {
     // RESULT_UPLOADING + done => update to ReplicateStatus.RESULT_UPLOADED
     //                            RecoveryAction.WAIT
     void shouldTellReplicateToWaitSinceDetectedResultUpload() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RESULT_UPLOADING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.RESULT_UPLOADING);
 
@@ -1056,7 +1056,7 @@ class ReplicateSupplyServiceTests {
         when(replicatesService.isResultUploaded(CHAIN_TASK_ID)).thenReturn(true);
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1072,7 +1072,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // RESULT_UPLOADED => RecoveryAction.WAIT
     void shouldTellReplicateToWaitSinceItUploadedResult() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.RESULT_UPLOADING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.RESULT_UPLOADED);
 
@@ -1085,7 +1085,7 @@ class ReplicateSupplyServiceTests {
         when(replicatesService.isResultUploaded(CHAIN_TASK_ID)).thenReturn(true);
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1101,7 +1101,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // REVEALED + Task in completion phase => RecoveryAction.WAIT
     void shouldTellReplicateToWaitForCompletionSinceItRevealed() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.FINALIZING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.REVEALED);
 
@@ -1114,7 +1114,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1127,7 +1127,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // REVEALED + RESULT_UPLOADED + Task in completion phase => RecoveryAction.WAIT
     void shouldTellReplicateToWaitForCompletionSinceItRevealedAndUploaded() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.FINALIZING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.REVEALED);
         replicate.get().updateStatus(ReplicateStatus.RESULT_UPLOADED, ReplicateStatusModifier.POOL_MANAGER);
@@ -1142,7 +1142,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1154,7 +1154,7 @@ class ReplicateSupplyServiceTests {
 
     @Test
     void shouldTellReplicateToCompleteSinceItRevealed() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.FINALIZING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.REVEALED);
         Task completedTask = Task.builder()
@@ -1172,7 +1172,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isNotEmpty();
         TaskNotificationType taskNotificationType = missedTaskNotifications.get(0).getTaskNotificationType();
@@ -1185,7 +1185,7 @@ class ReplicateSupplyServiceTests {
     @Test
     // !REVEALED + Task in completion phase => null / nothing
     void shouldNotTellReplicateToWaitForCompletionSinceItDidNotReveal() {
-        List<String> ids = Arrays.asList(CHAIN_TASK_ID);
+        List<String> ids = List.of(CHAIN_TASK_ID);
         List<Task> taskList = getStubTaskList(TaskStatus.FINALIZING);
         Optional<Replicate> replicate = getStubReplicate(ReplicateStatus.REVEALING);
 
@@ -1196,7 +1196,7 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
 
         List<TaskNotification> missedTaskNotifications =
-                replicateSupplyService.getMissedTaskNotifications(3l, WALLET_WORKER_1);
+                replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
 
         assertThat(missedTaskNotifications).isEmpty();
 
@@ -1210,14 +1210,14 @@ class ReplicateSupplyServiceTests {
                 .currentStatus(status)
                 .build();
 
-        return Arrays.asList(task);
+        return List.of(task);
     }
 
     Optional<Replicate> getStubReplicate(ReplicateStatus status) {
         Replicate replicate = new Replicate();
         replicate.setWalletAddress(WALLET_WORKER_1);
         replicate.setChainTaskId(CHAIN_TASK_ID);
-        replicate.setStatusUpdateList(new ArrayList<ReplicateStatusUpdate>());
+        replicate.setStatusUpdateList(new ArrayList<>());
         replicate.updateStatus(status, ReplicateStatusModifier.WORKER);
         return Optional.of(replicate);
     }
